# integrated-afc-dr

./: .gitignore  README.md  pyproject.toml
config/: config_example.yml
scripts/: main_afc.py  main_baseline.py  main_wpe.py
src/afc_dr/: __init__.py
src/afc_dr/baseline/: __init__.py  caf_ctf.py
src/afc_dr/mclp/: __init__.py  afc.py  wpe.py
src/afc_dr/metrics/: SNR.py  __init__.py  msg.py  pesq.py  stoi.py
src/afc_dr/plotting/: __init__.py  signal.py
src/afc_dr/signal_generation/: __init__.py  generation.py  parameters.py
