[project]
name = "afc_dr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Basil Liekens", email = "basil.liekens@esat.kuleuven.be" }
]
requires-python = ">=3.13"
dependencies = [
    "jax>=0.9.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pesq>=0.0.4",
    "pystoi>=0.4.1",
    "pyyaml>=6.0.3",
    "scipy>=1.17.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
